objects/TILBP__TIAssignmentSubmission__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Asset__c</fullName>
        <label>Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__AssignmentTitle__c</fullName>
        <label>Assignment Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Assignment__c</fullName>
        <label>Assignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TILBP__CommentsCount__c</fullName>
        <label>Comments Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Course__c</fullName>
        <label>Course</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__CreatedAt__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__TICourse__c</fullName>
        <label>Course</label>
        <referenceTo>TILBP__TI_Content__c</referenceTo>
        <relationshipLabel>TI Assignment Submissions</relationshipLabel>
        <relationshipName>TI_Assignment_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TILBP__TIID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>TI ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TILBP__TIUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TI Assignment Submissions</relationshipLabel>
        <relationshipName>TI_Assignment_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__TI_ID__c</fullName>
        <label>TI ID (DEPRECATED)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__UpdatedAt__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__VideoAsset__c</fullName>
        <label>Video Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TI Assignment Submission</label>
    <listViews>
        <fullName>TILBP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TI Assignment Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TI Assignment Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>